Iterative LS works, Random and Clock added

--- a/solver-v2/src/Makefile
+++ b/solver-v2/src/Makefile
@@ -15,13 +15,15 @@ LIBDIR=../lib
 GECODE_LINKS=-lgecodegist -lgecodeint -lgecodesearch -lgecodekernel -lgecodesupport -lgecodedriver -lgecodeminimodel -lgecodeset -lgecodefloat
 
 COIN = ${HOME}/Coin/coin-CoinUtils
-EASYLOCAL = ${HOME}/Speciale/GLS/trunk/solver-v1.0/easylocal
+#EASYLOCAL = ${HOME}/Speciale/GLS/trunk/solver-v1.0/easylocal
 BOOST = ${HOME}/boost/boost_1_57_0
 BOOST_LIB = ${HOME}/boost/boost_1_57_0/stage/lib
 #CXXFLAGS = -std=c++11 -Wall #-O3 # -g
-EASYLOCALLIB = -lEasyLocal -lboost_program_options
-LDFLAGS = -L$(EASYLOCAL)/lib -L$(BOOST_LIB) -L../lib -L/usr/lib -L/usr/lib/i386-linux-gnu/ 
-LIBS = $(EASYLOCALLIB) 
+#EASYLOCALLIB = -lEasyLocal -lboost_program_options
+
+#LDFLAGS = -L$(EASYLOCAL)/lib -L$(BOOST_LIB) -L../lib -L/usr/lib -L/usr/lib/i386-linux-gnu/ 
+LDFLAGS = -L$(BOOST_LIB) -L../lib -L/usr/lib -L/usr/lib/i386-linux-gnu/ 
+#LIBS = $(EASYLOCALLIB) 
 
 
 
@@ -30,14 +32,15 @@ LD=g++
 CXX=g++
 
 CXXFLAGS = -std=c++11 -g -Wextra -Wall  -Wfatal-errors # -DNDEBUG
-CPPFLAGS = -I$(EASYLOCAL)/include -I$(BOOST) -I../include -I$(COIN)/include -I${GECODE_HOME} 
+CPPFLAGS = -I$(BOOST) -I../include -I$(COIN)/include -I${GECODE_HOME} 
+#CPPFLAGS = -I$(EASYLOCAL)/include -I$(BOOST) -I../include -I$(COIN)/include -I${GECODE_HOME} 
 LDFLAGS +=  -pthread -Wl,--rpath,$(GECODE_HOME) -Wl,--rpath,$(COIN)/lib -L${GECODE_HOME} -L$(COIN)/lib#-Wl, --rpath,$(LIBDIR)
 LIBS += ${GECODE_LINKS} -lCoinUtils -lz -llapack -lblas -lm -lbz2 
 
 #SOURCE_FILES = main.cpp BP_Data.cpp LSSpace.cpp GeneralSolver.cpp ../include/constraints/linear.cpp Sum.cpp #../include/constraints/invariant.cpp #IntegerVariable.cpp
 # BP_Basics.cpp BP_Helpers.cpp 
 # ../include/constraints/Equal.cpp ../include/constraints/LinearComb.cpp ../include/constraints/Constraint.cpp ../include/constraints/ConstraintSystem.cpp
-OBJECT_FILES = main.o BP_Data.o LSSpace.o GeneralSolver.o  IntegerVariable.o Sum.o Test.o State.o NeighborhoodExplorer.o #Move.o FlipMove.o ValueChangeMove.o #linear.o #Invariant.o
+OBJECT_FILES = main.o BP_Data.o LSSpace.o GeneralSolver.o  IntegerVariable.o Sum.o Test.o State.o NeighborhoodExplorer.o Random.o Clock.o #Move.o #FlipMove.o ValueChangeMove.o #linear.o #Invariant.o
 # BP_Basics.o BP_Helpers.o 
 #../include/constraints/Equal.o ../include/constraints/LinearComb.o ../include/constraints/Constraint.o ../include/constraints/ConstraintSystem.o
 #HEADER_FILES = BP_Data.hpp Constants.hpp LSSpace.hpp GeneralSolver.hpp ../include/constraints/Sum.hpp ../include/constraints/linear.hpp IntegerVariable.hpp invariant.hpp
