--- a/solver-v2/src/Makefile
+++ b/solver-v2/src/Makefile
@@ -40,7 +40,7 @@ LIBS += ${GECODE_LINKS} -lCoinUtils -lz -llapack -lblas -lm -lbz2
 #SOURCE_FILES = main.cpp BP_Data.cpp LSSpace.cpp GeneralSolver.cpp ../include/constraints/linear.cpp Sum.cpp #../include/constraints/invariant.cpp #IntegerVariable.cpp
 # BP_Basics.cpp BP_Helpers.cpp 
 # ../include/constraints/Equal.cpp ../include/constraints/LinearComb.cpp ../include/constraints/Constraint.cpp ../include/constraints/ConstraintSystem.cpp
-OBJECT_FILES = main.o BP_Data.o LSSpace.o GeneralSolver.o  IntegerVariable.o Sum.o Test.o State.o NeighborhoodExplorer.o Random.o Clock.o #Move.o #FlipMove.o ValueChangeMove.o #linear.o #Invariant.o
+OBJECT_FILES = main.o BP_Data.o LSSpace.o GeneralSolver.o  IntegerVariable.o Sum.o Test.o State.o NeighborhoodExplorer.o Random.o Clock.o Multistop.o #Move.o #FlipMove.o ValueChangeMove.o #linear.o #Invariant.o
 # BP_Basics.o BP_Helpers.o 
 #../include/constraints/Equal.o ../include/constraints/LinearComb.o ../include/constraints/Constraint.o ../include/constraints/ConstraintSystem.o
 #HEADER_FILES = BP_Data.hpp Constants.hpp LSSpace.hpp GeneralSolver.hpp ../include/constraints/Sum.hpp ../include/constraints/linear.hpp IntegerVariable.hpp invariant.hpp
