Tabu search without Min conflict implemented

--- a/solver-v2/src/Makefile
+++ b/solver-v2/src/Makefile
@@ -47,7 +47,7 @@ LIBS += ${GECODE_LINKS} -lCoinUtils -lz -llapack -lblas -lm -lbz2  #-lgomp
 # ../include/constraints/Equal.cpp ../include/constraints/LinearComb.cpp ../include/constraints/Constraint.cpp ../include/constraints/ConstraintSystem.cpp
 OBJECT_FILES = main.o BP_Data.o LSSpace.o GeneralSolver.o  Variable.o Sum.o Model.o State.o Neighborhood.o FlipNeighborhood.o \
 Random.o Clock.o Multistop.o GecodeSolver.o Max.o DependencyDigraph.o BestImprovement.o FirstImprovement.o RandomWalk.o Flip2Neighborhood.o SwapNeighborhood.o \
-LEQviolation.o EQviolation.o # Test.o Move.o #FlipMove.o ValueChangeMove.o #linear.o #Invariant.o
+LEQviolation.o EQviolation.o TabuSearch.o MinConflictFlipNE.o # Test.o Move.o #FlipMove.o ValueChangeMove.o #linear.o #Invariant.o
 # BP_Basics.o BP_Helpers.o 
 #../include/constraints/Equal.o ../include/constraints/LinearComb.o ../include/constraints/Constraint.o ../include/constraints/ConstraintSystem.o
 #HEADER_FILES = BP_Data.hpp Constants.hpp LSSpace.hpp GeneralSolver.hpp ../include/constraints/Sum.hpp ../include/constraints/linear.hpp IntegerVariable.hpp invariant.hpp
